# django-packages-miner

./: .gitignore  README.md  pyproject.toml
authors-mining/: main.py  test.py
data/: django-packages-authors-by-month.csv  django-packages-authors-by-year.csv  django-packages-authors.csv  django-packages.csv
mining/: Dockerfile  control_version.py  django_packages.py  django_packages_api.py  django_packages_dataframe.py  django_packages_provider_factory.py  docker-compose.yml  main.py  pyproject.toml  report_register.py  requirements.txt
src/: Dockerfile  control_version.py  django-packages.csv  django-packages.ipynb  django_packages.py  docker-compose.yml  get_data.py  main.py
src/mining/: Dockerfile  control_version.py  docker-compose.yml  main.py  report_register.py
src/visualization/: aggregation_methods.py  data_methods.py  django-packages.csv  django-packages.ipynb  full-data.ipynb  github-django-packages.ipynb  removed-django-packages.ipynb  visualization_methods.py
visualization/: aggregation_methods.py  authors.ipynb  data_methods.py  deprecated-packages.ipynb  django-packages-authors.ipynb  django-packages.ipynb  full-data.ipynb  github-django-packages.ipynb  removed-django-packages.ipynb  sample-django-packages.ipynb  visualization_methods.py
