[tool.poetry]
name = "django-packages-miner"
version = "1.0.0"
description = ""
authors = ["Rafael Torres <souza.t.rafael@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
python-gitlab = "^3.3.0"
PyGithub = "^1.55"
GitPython = "^3.1.27"
pandas = "^1.4.2"
beautifulsoup4 = "^4.11.1"
networkx = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
